--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "jest": "^26.6.0",
+    "jest-cli": "^26.6.3"
   }
 }
